[package]
name = "soar-db"
version = "0.1.0"
authors = ["Aaron Blankstein <aaron@hiro.so>"]
edition = "2021"
resolver = "2"

[dependencies]
lazy_static = "1.4.0"
serde = "1"
serde_derive = "1"
serde_json = { version = "1.0", features = ["arbitrary_precision", "raw_value"] }
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
clarity = { git = "https://github.com/stacks-network/stacks-blockchain.git", rev = "580e811223a389d38071dcb9fde79ab55cd6f685" }
stacks-common = { git = "https://github.com/stacks-network/stacks-blockchain.git", rev = "580e811223a389d38071dcb9fde79ab55cd6f685" }
# clarity = { package = "clarity", path = "../../../stacks-blockchain-develop/clarity" }
# stacks-common = { package = "stacks-common", path = "../stacks-blockchain-develop/stacks-common" }

[lib]
name = "soar_db"
path = "src/lib.rs"

[features]
default = []
